@@ -1,3 +1,8 @@
+2007-04-02  Brian Bidulock  <bidulock@openss7.org>
+
+	* doc/manual/bugs.texi: documented bugs fixed in ldl
+	* src/drivers/ldl.c: fixed MKDEV bug in ldl and added missing MODULE_ALIAS's
+
 2007-03-30  Brian Bidulock  <bidulock@openss7.org>
 
 	* doc/man/man7/npi_ip.7.man: documentation corrections
